tests/miniJava/neg/005251_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] new ( ) { return 0 ; } }
